# Where-is-my-train-TUI

./: .gitignore  Cargo.toml  README.md  mobile-tui.js
bridge/: dump_ntes.js  package-lock.json  package.json  server.js  server.mobile.js  test_confirmtkt.js  test_direct_api.js  test_ntes_direct.js  test_tracking_fix.js
scripts/: build_db.js  package-lock.json  package.json  setup-alpine.sh  setup-termux.sh
src/: app.rs  db.rs  main.rs  utils.rs
src/api/: client.rs  types.rs
src/ui/: home.rs  mod.rs  station_picker.rs  widgets.rs
