[package]
name = "where-is-my-train"
version = "0.1.0"
edition = "2021"
description = "Where Is My Train — A beautiful TUI for Indian Railways live tracking"
authors = ["Aditya Giri"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
chrono = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
fuzzy-matcher = "0.3.7"
